--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,3 +21,9 @@
     text-wrap: balance;
   }
 }
+
+.selectBox {
+  border: 1px solid #55aaff;
+  background-color: rgba(75, 160, 255, 0.2);
+  position: fixed;
+}
